--- a/src/Pages/FAQ/style.css
+++ b/src/Pages/FAQ/style.css
@@ -70,7 +70,7 @@
         font-size: 1.1rem;
     }
     .faq_search_md{
-        width: 260px;
+        width: 90%;
         margin-top: 15px;
     }
 }
