--- a/src/Pages/Terms/Terms.css
+++ b/src/Pages/Terms/Terms.css
@@ -223,6 +223,7 @@
     text-align: center;
   }
   .mobileView_terms_top_img{
+    display: block;
     width: 50%;
     text-align: center;
     margin: 40px auto;
