--- a/src/Layout/style.css
+++ b/src/Layout/style.css
@@ -302,20 +302,44 @@ ul{
   
 
 /* foterr  */
+
+.footer_main_container{
+  background-color: #f0f4fc;
+
+}
+
 .footer_main_div {
   display: flex;
-  padding: 20px 120px;
+  padding: 20px 20px;
+  width: 80%;
+  margin: 0px auto;
   padding-top: 50px;
   justify-content: space-between;
-  background-color: #f0f4fc;
+  max-width: 1400px;
 }
 .footer_link_div {
-  width: 50%;
+  width: 57%;
 }
-.f_links {
+.links_footer{
+  width: 190px;
+  /* border: 2px solid; */
+}
+.links_footer>h6{
   font-weight: bold;
   color: #2e58a6;
+
+}
+.footer_links{
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: space-between;
+  width: 530px;
+}
+.f_links {
+  color: #2e58a6;
   text-decoration: none;
+  margin-top: 7px ;
+  display: inline-block;
 }
 .f_links:hover {
   color: #2e58a6;
@@ -327,13 +351,13 @@ ul{
   margin-top: 10px;
 }
 .footer_form_div {
-  width: 28%;
+  width: 34%;
   margin-left: 30px;
 }
 .link_ul {
   list-style: none;
-  display: flex;
-  justify-content: space-between;
+  /* display: flex; */
+  /* justify-content: space-between; */
   width: 70%;
   padding-left: 0px;
   font-size: 0.9rem;
@@ -452,6 +476,12 @@ ul{
     flex-wrap: wrap;
     padding: 50px 20px;
     justify-content: center;
+    width: 95%;
+  }
+  .footer_links{
+    margin: 20px auto;
+    margin-bottom: 50px;
+    width: 100%;
   }
   .web_logo {
     margin: 0px auto;
@@ -463,7 +493,7 @@ ul{
     margin-left: 5px;
   }
   .footer_link_div {
-    width: 80%;
+    width: 100%;
     text-align: center;
   }
   .link_ul {
@@ -496,6 +526,14 @@ ul{
     flex-wrap: wrap;
     justify-content: center;
   }
+  .footer_links{
+    align-items: center;
+    flex-direction: column;
+    
+  }
+  .links_footer{
+    margin: 20px 0px;
+  }
   .custom_nav {
     padding: 10px;
   }
@@ -512,9 +550,9 @@ ul{
     margin: 10px auto;
     flex-direction: column;
   }
-  .link_ul > li {
+  /* .link_ul > li {
     margin-top: 20px;
-  }
+  } */
   .footer_para1 {
     margin-top: 15px;
   }
