--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -119,6 +119,7 @@
   padding: 20px 0px;
   border-radius: 20px;
   padding-bottom: 0px;
+  align-items: center;
 }
 
 .hcb_left {
@@ -217,8 +218,9 @@
     text-align: center;
   }
   .about_content {
-    /* flex-direction: column; */
+    flex-direction: column-reverse;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
   }
   .about_left_content1 {
@@ -237,7 +239,7 @@
   .about_right_content2 > img {
     margin-left: 0px;
     width: 80%;
-    height: 300px;
+    height: auto;
     margin: 0px auto;
     text-align: center;
   }
@@ -248,6 +250,9 @@
     width: 100%;
     height: 100%;
   }
+  .about_left_content2 h2{
+    display: none;
+  }
 }
 @media screen and (max-width:600px){
   .hcb_left h2{
@@ -256,6 +261,9 @@
   /* .home_commingsoon{
     width: 100%;
   } */
+  .hcb_left p{
+    font-size: .85rem;
+  }
 }
 
 @media screen and (max-width:400px){
@@ -265,5 +273,6 @@
   .home_commingsoon{
     width: 100%;
     padding: 1rem 10px;
+    padding-bottom: 0px;
   }
 }
