--- a/src/Pages/DashboardAccount/Style/table.css
+++ b/src/Pages/DashboardAccount/Style/table.css
@@ -39,7 +39,7 @@
 }
 .db_table tr {
   border-radius: 8px;
-  box-shadow: 0px 3px 6px #707070;
+  box-shadow: 0px 3px 6px #00000029;
   background-color: white;
 }
 .db_table tr:hover {
