--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -16,7 +16,19 @@
     margin-left: 10px;
     color: #2E58A6;
     
+}
+.abt_contetn{
+    width: 900px;
+    max-width: 900px;
+    margin: 20px auto;
 } 
+.ab_left_c1{
+    width: 470px;
+}
+.ab_left_c1>h2{
+  width: 250px;
+  line-height: 2rem;
+}
 .contact_form_main_div{
     display: flex;
     width: 900px;
@@ -160,6 +172,25 @@
         width: 80%;
         justify-content: center;
     }
+    .ab_left_c1{
+        width: 500px;
+        margin: 20px auto;
+        text-align: center;
+    }
+    .ab_left_c1>h2{
+        width: 100%;
+    }
+    .ab_left_c1 p{
+        text-align: center;
+    }
+    .about_right_content1{
+        height: 100%;
+    }
+    .abt_contetn{
+       width: 100%;
+       flex-direction: column-reverse;
+       align-items: center;
+    }
     .contact_path{
         display: none;
     }
@@ -173,16 +204,29 @@
         margin: 20px auto;
     }
     .contact_section2{
-        margin-top: 160px;
+        margin-top: 30px;
     }
     .contact_img1{
-        margin-top: 40px !important;
+        margin-top: 10px !important;
+    }
+    .abt_right_c1{
+        width: 500px;
+        text-align: center;
     }
     
 }
 @media screen and (max-width:520px){
     .contact_section2{
         margin-top: 20px;
+    }
+    .abt_right_c1{
+        width: 100%;
+        padding: 0px 15px;
+    }
+    .ab_left_c1{
+        width: 100%;
+        padding: 0px 15px;
+
     }
     .contact_video_img,.contact_video_img img,.video_desc{
         width: 100%;
