--- a/src/Pages/DashboardAccount/TravelBooking/style.css
+++ b/src/Pages/DashboardAccount/TravelBooking/style.css
@@ -25,7 +25,7 @@
   padding: 10px 0px;
   padding-left: 15px;
   opacity: 0.7;
-  background-color: white;
+  background-color: white !important;
 }
 .tb_search_md > form > input::placeholder {
   color: black;
@@ -34,14 +34,22 @@
   display: flex;
   width: 50%;
 }
-.tb_search_md > form > div > select {
+.tb_select_md{
+  padding: 5px 7px;
+  width: 100%;
+  background-color: white;
+  margin-left: 15px;
+  box-shadow: inset 0 1px 2px rgba(83, 83, 83, 0.39), 0 -1px 0px #FFF, 0 1px 0 #FFF;
+  border-radius: 5px;
+}
+.tb_search_md > form > div .tb_select_md  select {
+  padding: 5px 0px;
   border: none;
   outline: none;
-  margin-left: 15px;
-  padding: 10px 10px;
   opacity: 0.7;
   /* width: 240px; */
   width: 100%;
+  box-shadow: none;
 }
 .tb_search_md > form > button {
   margin-left: 20px;
@@ -75,12 +83,13 @@
 }
 
 .tb_page_table thead {
-  background-color: #748aa6;
+  background-color: #9fadc0;
 }
 .tb_page_table thead th {
   color: white;
   font-size: 0.8rem;
   opacity: 1;
+  font-weight: 400 !important;
 }
 
 /* result per page  */
